--- a/WebBanGiay/nbproject/private/private.properties
+++ b/WebBanGiay/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-file.reference.javax.mail.jar=E:\\Chuy\u00ean Ng\u00e0nh\\Java Web\\PRJ321_SE1403_Group03_WebsiteSellShoes\\WebBanGiay\\javax.mail.jar
-file.reference.javax.mail.jar-1=E:\\Chuy\u00ean Ng\u00e0nh\\Java Web\\PRJ321_SE1403_Group03_WebsiteSellShoes\\WebBanGiay\\javax.mail.jar
-j2ee.server.home=C:/Users/Admin/Downloads/apache-tomcat-9.0.35-windows-x64/apache-tomcat-9.0.35
-j2ee.server.instance=tomcat90:home=C:\\Users\\Admin\\Downloads\\apache-tomcat-9.0.35-windows-x64\\apache-tomcat-9.0.35
+deploy.ant.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.javax.mail.jar=C:\\Users\\Dell\\Desktop\\PRJ321_SE1403_Group03_WebsiteSellShoes-master\\WebBanGiay\\javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\Dell\\Desktop\\PRJ321_SE1403_Group03_WebsiteSellShoes-master\\WebBanGiay\\javax.mail.jar
+j2ee.server.home=C:/apache-tomcat-9.0.35
+j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-9.0.35
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
