--- a/WebBanGiay/nbproject/project.properties
+++ b/WebBanGiay/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
 excludes=
 file.reference.javax.mail.jar=C:\\Users\\Admin\\Downloads\\WebsiteBanHang\\WebsiteBanHang\\WebContent\\WEB-INF\\lib\\javax.mail.jar
 file.reference.javax.mail.jar-1=build\\javax.mail.jar
+file.reference.javax.mail.jar-2=C:\\Users\\Admin\\Downloads\\WebBanGiay\\javax.mail.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.javax.mail.jar-1}
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.javax.mail.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
