--- a/WebBanGiay/nbproject/private/private.properties
+++ b/WebBanGiay/nbproject/private/private.properties
@@ -5,4 +5,4 @@ file.reference.javax.mail.jar-2=C:\\Users\\Admin\\Desktop\\WebBanGiay\\javax.mai
 j2ee.server.home=C:/Users/Admin/Downloads/apache-tomcat-9.0.35-windows-x64/apache-tomcat-9.0.35
 j2ee.server.instance=tomcat90:home=C:\\Users\\Admin\\Downloads\\apache-tomcat-9.0.35-windows-x64\\apache-tomcat-9.0.35
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\huuph\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
